--- a/client/main.css
+++ b/client/main.css
@@ -1,40 +1,120 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,300,400,700);
+
+html, body {
+    background: #e5e5e5;
+    font-family: 'Lato', sans-serif;
+    margin: 0px auto;
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body {
-    font: 13px Helvetica, Arial;
-}
-form {
-    background: #000;
-    padding: 3px;
-    display: none;
-    width: 100%;
-}
+
 form input {
-    border: 0;
-    padding: 10px;
-    width: 90%;
-    margin-right: .5%;
-}
-form button {
-    width: 9%;
-    background: rgb(130, 224, 255);
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 50px;
+    z-index: 99;
+    background: #fafafa;
     border: none;
-    padding: 10px;
+    outline: none;
+    padding-left: 55px;
+    padding-right: 55px;
+    color: #666;
+    font-weight: 400;
+    word-wrap: normal;
+    word-break: normal;
 }
 #messageWindow {
     overflow: auto;
 }
 #messages {
-    list-style-type: none;
+    list-style: none;
+    background: none;
     margin: 0;
-    padding: 0;
+    padding: 0 0 50px 0;
+    margin-top: 60px;
+    margin-bottom: 10px;
 }
 #messages li {
-    padding: 5px 10px;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background: white;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.07);
+    font-size: 0.8rem;
+    margin: 0.2rem 1.5rem 0.2rem 1rem;
+    color: #777;
+    word-wrap: normal;
+    word-break: normal;
 }
-#messages li:nth-child(odd) {
-    background: #eee;
+
+
+.topbar {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    width: 100%;
+    height: 50px;
+    background: rgba(82,179,217,0.9);
+    z-index: 100;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.title {
+    position: absolute;
+    top: 8px;
+    left: 50%;
+    font-family: 'Lato';
+    font-size: 25px;
+    font-weight: 300;
+    color: rgba(255,255,255,0.98);
+    cursor: default;
+}
+
+::-webkit-scrollbar {
+    min-width: 12px;
+    width: 12px;
+    max-width: 12px;
+    min-height: 12px;
+    height: 12px;
+    max-height: 12px;
+    background: #e5e5e5;
+    box-shadow: inset 0px 50px 0px rgba(82,179,217,0.9), inset 0px -52px 0px #fafafa;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #bbb;
+    border: none;
+    border-radius: 100px;
+    border: solid 3px #e5e5e5;
+    box-shadow: inset 0px 0px 3px #999;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #b0b0b0;
+    box-shadow: inset 0px 0px 3px #888;
+}
+
+::-webkit-scrollbar-thumb:active {
+    background: #aaa;
+    box-shadow: inset 0px 0px 3px #7f7f7f;
+}
+
+::-webkit-scrollbar-button {
+    display: block;
+    height: 26px;
 }
