--- a/client/main.css
+++ b/client/main.css
@@ -94,12 +94,14 @@ form input {
 
 .username {
     margin: 0;
+    font-weight: bolder;
     display: inline-block;
     width: 75%;
 }
 
 .time {
     margin: 0;
+    font-weight: bolder;
     display: inline-block;
     width: 25%;
     text-align: right;
